--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <i class="fas fa-futbol"></i>
-                FootballCentral
+                FootballCentral by Fiharali
             </div>
             <p class="footer-text">
                 &copy; 2025 FootballCentral - The Ultimate Football Experience. All rights reserved.
