--- a/index.html
+++ b/index.html
@@ -578,6 +578,8 @@
     </footer>
 
     <script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3571928617440133"
+     crossorigin="anonymous"></script>
         // Theme management
         function toggleTheme() {
             const body = document.body;
